--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.28.0",
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.9.2",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
+    "framer-motion": "^12.23.24",
     "next": "16.0.1",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
-    "resend": "^6.4.0",
+    "react-intersection-observer": "^10.0.0",
+    "react-redux": "^9.2.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -27,6 +32,7 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
